--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,12 @@ margin-right: 50px;
     margin: 0 auto;
     padding-top: 200px;
     padding-bottom: 200px;
-
-    background-color: var(--footer-bg-color);
+    max-width: 1600px;
+    background-color: #C4C4C4;
+    background-image: linear-gradient( rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     text-align: center;
 }
 .hero-title {
@@ -172,9 +176,21 @@ margin-right: 50px;
     background-color: var(--footer-bg-color);
 }
 /* Our Skills */
+.icon{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.about-icon{
+    
+    width: 270px;
+    height: 120px;
+    background-color: var(--background-team-color);
+}
+
 .about-list{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-between;
     align-items: center;
 }
 .about-list-item{
