--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --footer-contact-color: rgba(255, 255, 255, 0.6);
     --logo-color: #000000;
     --background-team-color: #F5F4FA;
+    --icon-color: #AFB1B8;
 }
 
 body {
@@ -114,10 +115,18 @@ h1,h2,h3,h4,h5,h6,p{
     display: flex;
     margin-left: auto;
 }
+.contact-icon{
+    margin-right: 10px;
+    fill: currentColor;
+}
+
 .contact-item:not(:last-child){
 margin-right: 50px;
 }
 .header-contact.link {
+    display: flex;
+    align-items: center;
+
     color: inherit;
 }
 
@@ -125,7 +134,10 @@ margin-right: 50px;
 .link:focus {
     color: var(--accent-color);
 }
-
+.contact-icon:hover,
+.contact-icon:focus{
+    fill: currentColor;
+}
 
 /* Hero */
 .hero{
@@ -181,12 +193,15 @@ margin-right: 50px;
     justify-content: space-between;
     margin-bottom: 30px;
 }
-.about-icon{
-    
+.icon-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 270px;
     height: 120px;
     background-color: var(--background-team-color);
 }
+
 
 .about-list{
     display: flex;
@@ -253,9 +268,87 @@ margin-right: 50px;
     color: var(--title-text-color);
 }
 .team-description{
+    margin-bottom: 16px;
+
     font-size: 16px;
     line-height: 1.19;
 }
+.social-list{
+    display: flex;
+    justify-content: center;
+}
+.social-item:not(:last-child){
+    margin-right: 10px;
+}
+.social-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 44px;
+    height: 44px;
+}
+.social-icon{
+    fill:var(--icon-color);
+}
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--accent-color);
+    border-radius: 50%;
+}
+.social-link:hover .social-icon{
+    fill: #FFFFFF;
+}
+.social-link:focus .social-icon{
+    fill: #FFFFFF;
+}
+
+/* Clients */
+
+.clients-title {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    color: #212121;
+}
+.clients-list {
+    display: flex;
+    justify-content: center;
+}
+
+.clients-item {
+    border: 1px solid var(--icon-color);
+    border-radius: 4px;
+}
+.clients-item:not(:last-child){
+    margin-right: 30px;
+}
+
+.clients-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 170px;
+    height: 92px;
+}
+.clients-icon{
+    fill: var(--icon-color)
+}
+.clients-item:hover,
+.clients-item:focus{
+    border-color: var(--accent-color);
+}
+
+.clients-link:hover .clients-icon{
+    fill: var(--accent-color);
+}
+.clients-link:focus .clients-icon{
+    fill: var(--accent-color);
+}
+
 /* Footer */
 .footer {
     background-color: var(--footer-bg-color);
@@ -270,7 +363,11 @@ margin-right: 50px;
     color: var(--white-text-color);
 }
 .address-list{
+    display: block;
     padding-bottom: 60px;
+}
+.address-list:not(:last-child){
+    margin-bottom: 9px;
 }
 .address {
     font-style: normal;
@@ -283,6 +380,57 @@ margin-right: 50px;
     font-style: normal;
     color: var(--footer-contact-color);
 }
+/* Join */
+
+.footer-container{
+    display: flex;
+}
+
+
+.join{
+    display: flex;
+    flex-direction: column;
+    margin-left: 70px;
+    justify-content: flex-end;
+    padding-bottom: 100px;
+}
+.join-title{
+    margin-bottom: 20px;
+
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--white-text-color);
+}
+.join-list{
+    display: flex;
+}
+.join-item{
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+}
+.join-item:not(:last-child){
+    margin-right: 10px;
+}
+.join-item:hover,
+.join-item:focus{
+    background-color: var(--accent-color);
+}
+
+.join-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 44px;
+    height: 44px;
+}
+
+.join-icon{
+    fill: var(--white-text-color);
+}
+
+
 
 /* Portfolio css */
 /* filter */
@@ -314,6 +462,8 @@ margin-right: 50px;
 .btn-filter:focus {
     color: var(--white-text-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 .btn-filter.current{
     color: var(--white-text-color);
@@ -331,6 +481,10 @@ margin-right: 50px;
 }
 .card-item:nth-child(3n){
     margin-right: 0px;
+}
+.card-item:hover,
+.card-item:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 
